--- a/styles.sass
+++ b/styles.sass
@@ -2,16 +2,27 @@
  margin: 0
  padding: 0
 .containerMain
- width: 100%
+ width: 96%
  height: 100vh
+ margin: 0 auto
  display: grid
- grid-template-rows: repeat(4,1fr )
+ grid-template-rows: repeat(3,1fr ) auto
 
+.containerSedans,.containerSubs,.containerLuxury
+ display: grid
+ grid-template-rows: repeat(4,auto)
+.containerSedans
+ background: hsl(31, 77%, 52%)
 
+.containerSubs
+ background: hsl(184, 100%, 22%)
 
+.containerLuxury
+ background: hsl(179, 100%, 13%)
 
-
-
+.containerFooter
+ background: #2F243A
+ padding: 10px 0
 
 
 
