--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,15 @@
 .containerMain {
   width: 96%;
   height: 100vh;
-  margin: 0 auto;
+  margin: 50px auto;
   display: grid;
   grid-template-rows: repeat(3, 1fr) auto;
 }
 
-.containerSedans, .containerSubs, .containerLuxury {
+.containerSedans__sub, .containerSubs__sub, .containerLuxury__sub {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
   display: grid;
   grid-template-rows: repeat(4, auto);
 }
