--- a/styles.sass
+++ b/styles.sass
@@ -9,12 +9,15 @@
  grid-template-rows: repeat(3,1fr ) auto
 
 
+.containerSedans, .containerSubs,.containerLuxury
+ height: 400px
 .containerSedans__sub,.containerSubs__sub,.containerLuxury__sub
  width: 80%
  height: 100%
  margin: 0 auto
  display: grid
  grid-template-rows: repeat(4, auto )
+
 .containerSedans
  background: hsl(31, 77%, 52%)
 
