--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +13,8 @@
 }
 
 .containerSedans, .containerSubs, .containerLuxury {
-  height: 400px;
+  height: 300px;
+  padding: 30px 0;
 }
 
 .containerSedans__sub, .containerSubs__sub, .containerLuxury__sub {
@@ -21,6 +23,38 @@
   margin: 0 auto;
   display: grid;
   grid-template-rows: repeat(4, auto);
+}
+
+.containerSedans__sub div, .containerSubs__sub div, .containerLuxury__sub div {
+  display: grid;
+  align-items: center;
+}
+
+.containerSedans__sub div h1, .containerSedans__sub div p, .containerSubs__sub div h1, .containerSubs__sub div p, .containerLuxury__sub div h1, .containerLuxury__sub div p {
+  color: white;
+}
+
+.containerSedans__sub div h1, .containerSubs__sub div h1, .containerLuxury__sub div h1 {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-family: 'Big Shoulders Display', cursive;
+  font-size: 40px;
+}
+
+.containerSedans__sub div p, .containerSubs__sub div p, .containerLuxury__sub div p {
+  font-size: 15px;
+  font-weight: 400;
+  font-family: 'Lexend Deca', sans-serif;
+}
+
+.containerSedans__sub div input, .containerSubs__sub div input, .containerLuxury__sub div input {
+  background: #fff;
+  padding: 10px 0;
+  border-radius: 40px;
+  border: none;
+  cursor: pointer;
+  width: 50%;
+  text-transform: capitalize;
 }
 
 .containerSedans {
