--- a/styles.sass
+++ b/styles.sass
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap');
 *
  margin: 0
  padding: 0
@@ -7,16 +8,38 @@
  margin: 50px auto
  display: grid
  grid-template-rows: repeat(3,1fr ) auto
-
-
 .containerSedans, .containerSubs,.containerLuxury
- height: 400px
+ height: 300px
+ padding: 30px 0
 .containerSedans__sub,.containerSubs__sub,.containerLuxury__sub
  width: 80%
  height: 100%
  margin: 0 auto
  display: grid
- grid-template-rows: repeat(4, auto )
+ grid-template-rows: repeat(4,auto)
+ div
+  display: grid
+  align-items: center
+  h1,p
+   color: white
+  h1
+   text-transform: uppercase
+   font-weight: 700
+   font-family: 'Big Shoulders Display', cursive
+   font-size: 40px
+  p
+     font-size: 15px
+     font-weight: 400
+     font-family: 'Lexend Deca', sans-serif
+  input
+     background: #fff
+     padding: 10px 0
+     border-radius: 40px
+     border: none
+     cursor: pointer
+     width: 50%
+     text-transform: capitalize
+     
 
 .containerSedans
  background: hsl(31, 77%, 52%)
