--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 }
 
 .containerSedans, .containerSubs, .containerLuxury {
-  height: 450px;
+  height: 400px;
   padding: 30px 0;
 }
 
@@ -54,7 +54,7 @@
   background: #fff;
   padding: 10px 0;
   border-radius: 40px;
-  border: none;
+  border: 2px solid white;
   cursor: pointer;
   width: 50%;
   text-transform: capitalize;
@@ -70,6 +70,11 @@
   color: #e38826;
 }
 
+.containerSedans .containerSedans__sub div:nth-child(4) input:hover {
+  background: none;
+  color: white;
+}
+
 .containerSubs {
   background: #006970;
 }
@@ -78,12 +83,22 @@
   color: #006970;
 }
 
+.containerSubs .containerSubs__sub div:nth-child(4) input:hover {
+  background: none;
+  color: white;
+}
+
 .containerLuxury {
   background: #004241;
 }
 
 .containerLuxury .containerLuxury__sub div:nth-child(4) input {
   color: #004241;
+}
+
+.containerLuxury .containerLuxury__sub div:nth-child(4) input:hover {
+  background: none;
+  color: white;
 }
 
 .containerFooter {
