--- a/styles.sass
+++ b/styles.sass
@@ -9,7 +9,7 @@
  display: grid
  grid-template-rows: repeat(3,1fr ) auto
 .containerSedans, .containerSubs,.containerLuxury
- height: 450px
+ height: 400px
  padding: 30px 0
 .containerSedans__sub,.containerSubs__sub,.containerLuxury__sub
  width: 80%
@@ -38,19 +38,21 @@
      background: #fff
      padding: 10px 0
      border-radius: 40px
-     border: none
+     border: 2px solid white
      cursor: pointer
      width: 50%
      text-transform: capitalize
      font-weight: 400
      font-family: 'Lexend Deca', sans-serif
-
 .containerSedans
  background: hsl(31, 77%, 52%)
  .containerSedans__sub
     div:nth-child(4)
        input
           color: hsl(31, 77%, 52%)
+          &:hover
+             background: none
+             color: white
 
 .containerSubs
  background: hsl(184, 100%, 22%)
@@ -58,20 +60,21 @@
     div:nth-child(4)
        input
           color: hsl(184, 100%, 22%)
-
-
+          &:hover
+             background: none
+             color: white
 .containerLuxury
  background: hsl(179, 100%, 13%)
  .containerLuxury__sub
     div:nth-child(4)
        input
           color: hsl(179, 100%, 13%)
-
-
+          &:hover
+             background: none
+             color: white
 .containerFooter
  background: #2F243A
  padding: 10px 0
-
 .attribution
    font-size: 11px
    text-align: center
